<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0000000"
    android:padding="20dp"
    android:textAlignment="center"
    tools:context=".u2.u2a3Propinatron2000"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-91dp">

    <TextView
        android:id="@+id/u2a3tvTitle"
        android:layout_width="251dp"
        android:layout_height="39dp"
        android:text="@string/u2a3Title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/u2a3btPoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFAB91"
        android:text="@string/u2a3Poor"
        android:textColor="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/u2a3btNice"
        android:layout_width="91dp"
        android:layout_height="49dp"
        android:backgroundTint="#FFAB91"
        android:text="@string/u2a3Nice"
        android:textColor="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/u2a3btGreat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFAB91"
        android:text="@string/u2a3Excellent"
        android:textColor="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <EditText
        android:id="@+id/u2a3etNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/u2a3tvTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2a3tvAmount" />

    <Button
        android:id="@+id/u2a3btN9"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n7"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/u2a3btN"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n2"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/u2a3btN7"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n8"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <Button
        android:id="@+id/u2a3btN2"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n3"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/u2a3btN4"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n6"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/u2a3btN19"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3nD"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/u2a3btN5"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n4"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/u2a3btN20"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3nC"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/u2a3btN1"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n1"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/u2a3btN3"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n5"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <Button
        android:id="@+id/u2a3btN6"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n9"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/u2a3btN18"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n0"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/u2a3tvAmount"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:text="@string/u2a3TotalMoney"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/u2a3tvTip"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:text="@string/u2a3TipsText"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

</androidx.constraintlayout.widget.ConstraintLayout>