<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0000000"
    android:padding="20dp"
    android:windowSoftInputMode="stateHidden"
    android:textAlignment="center"
    tools:context=".u2.u2a3Propinatron2000"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-91dp"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/u2a3tvTitle"
        android:layout_width="178dp"
        android:layout_height="86dp"
        android:text="@string/u2a3Title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/u2a3etNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:minHeight="48dp"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#F4F4F4"
        app:layout_constraintBottom_toTopOf="@+id/u2a3tvTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u2a3tvAmount"
        app:layout_constraintVertical_bias="0.52" />



    <Button
        android:id="@+id/u2a3btId7"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n7"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/u2a3btId2"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n2"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/u2a3btId8"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n8"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <Button
        android:id="@+id/u2a3btId3"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n3"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/u2a3btId6"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n6"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/u2a3btIdD"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3nD"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/u2a3btId4"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n4"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/u2a3btIdC"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3nC"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/u2a3btId1"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n1"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/u2a3btId5"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n5"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <Button
        android:id="@+id/u2a3btId9"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n9"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <Button
        android:id="@+id/u2a3btId0"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:backgroundTint="#CEB6A5D6"
        android:text="@string/u2a3n0"
        android:textAlignment="center"
        android:textColor="#000000"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <TextView
        android:id="@+id/u2a3tvAmount"
        android:layout_width="162dp"
        android:layout_height="30dp"
        android:text="@string/u2a3TotalMoney"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/u2a3tvTip"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <ImageView
        android:id="@+id/u2a3ImageView"
        android:layout_width="134dp"
        android:layout_height="213dp"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/weiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/weiter" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467">

        <RadioButton
            android:id="@+id/u2a3rbPoor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_radio_button"
            android:backgroundTint="#FFECB3"
            android:text="@string/u2a3Poor"
            app:cornerRadius="600dp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <RadioButton
            android:id="@+id/u2a3rbNice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_radio_button"
            android:backgroundTint="#FFECB3"
            android:text="@string/u2a3Nice"
            app:cornerRadius="600dp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <!-- Additional Space at the end -->
        <Space
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <RadioButton
            android:id="@+id/u2a3rbGreat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_radio_button"
            android:backgroundTint="#FFECB3"
            android:text="@string/u2a3Excellent"
            app:cornerRadius="600dp" />
    </RadioGroup>

    <Button
        android:id="@+id/u2a3btIdCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A5D6A7"
        android:text="@string/u2a3Calculate"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />


</androidx.constraintlayout.widget.ConstraintLayout>